test/negative/parse_missing_end_while.mut
# Negative: missing 'end' to close while
x: i64 = 0
while x < 10
    x += 1
